<resources>
    <string name="app_name">KisanBandhuV2</string>
    <string name="dash_title_text">Leaf Analysis Tool</string>
    <string name="camera_text">Camera</string>
    <string name="gallery_text">Gallery</string>
    <string name="upload_btn_text">Upload</string>
    <string name="upload_info_text">Upload image for processing.</string>
    <string name="no_image_warning_msg">Capture an image first!</string>
    <string name="upload_progress_msg">Uploading, Please wait...</string>
    <string name="something_went_wrong_msg">Something went wrong! Please try again.</string>
    <string name="pic_chooser_msg">Select Picture</string>
    <string name="select_img_label">Capture or, Select image for uploading</string>
    <string name="back_btn_txt">Back</string>
</resources>
