<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.digiwizkid.kisanbandhuv2.activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/dash_title_text"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bdbdbd"/>

            <LinearLayout
                android:id="@+id/img_upload_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/select_img_label"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:gravity="center"-->
                    <!--android:text="@string/camera_text"/>-->

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/camera_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_photo_camera_black_24dp"/>

                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:gravity="center"-->
                    <!--android:text="@string/gallery_text"/>-->

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/select_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_collections_black_24dp"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#bdbdbd"/>

                <ImageView
                    android:id="@+id/preview_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:padding="16dp"
                    android:src="@mipmap/img_placeholder"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#bdbdbd"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/upload_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/upload_btn_text"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/upload_info_text"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/response_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/response_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="response text"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/back_to_dash_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/back_btn_txt"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bdbdbd"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>